<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.codyyarwood.cs246scripturereference.MainActivity">

    <!-- Prompt user for 3 fields: book, chapter, verse -->
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        android:text="@string/prompt_main" />

    <EditText

        android:id="@+id/prompt_book"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"

        android:hint="@string/prompt_book" />

    <EditText
        android:id="@+id/prompt_chap"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_below="@+id/prompt_book"
        android:layout_alignParentStart="true"

        android:hint="@string/prompt_chap" />

    <EditText
        android:id="@+id/prompt_vers"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_below="@+id/prompt_chap"
        android:layout_alignParentStart="true"

        android:hint="@string/prompt_vers" />

    <!-- Our submit button -->
    <Button
        android:id="@+id/btn_submit"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="submit"

        android:text="@string/button_submit"
        />


</RelativeLayout>
